[metadata]
name = pylibcontainer
url = https://github.com/joaompinto/pylibcontainer
author = João Pinto
author_email = lamego.pinto@gmail.com
summary = An OCI runtime specification implementation library
description-file = README.rst
license = APACHE-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Testing
    Topic :: Utilities
include_package_data = True

[files]
packages =
    pylibcontainer

[entry_points]
console_scripts =
    pylibcontainer=pylibcontainer.command_line:main

[bdist_wheel]
universal=1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
