[metadata]
name = pylibcontainer
url = https://github.com/joaompinto/pylibcontainer
author = João Pinto
author_email = lamego.pinto@gmail.com
summary = An OCI runtime specification implementation library
description-file =
    README.md
description-content-type = text/markdown; charset=UTF-8
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Testing
    Topic :: Utilities

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[upload_sphinx]
upload-dir = docs/build/html
